--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -138,8 +138,8 @@ getrandom = { version = "0.2.11", features = ["js"] }  # feature 'js' is require
 #rcgen = { version = "0.11.3", optional = true }
 #rustls = { version = "0.22.1", optional = true }
 #rustls-pemfile = { version = "2.0.0", optional = true }
-xwt-core = { version = "0.2", optional = true }
-xwt-web-sys = { version = "0.3.1", optional = true }
+xwt-core = { path = "../vendor/xwt-core", optional = true }
+xwt-web-sys = { path = "../vendor/xwt-web-sys", optional = true }
 tokio = { version = "1.34", features = [
   "macros",
   "rt",
