--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -24,12 +24,11 @@ mock_time = ["dep:mock_instant"]
 render = ["bevy/bevy_render"]
 webtransport = [
   "dep:wtransport",
-  "dep:xwt-core",
-  "dep:xwt-web-sys",
   "dep:web-sys",
+  "dep:js-sys",
+  "dep:wasm-bindgen",
   "dep:tokio",
   "dep:ring",
-#  "dep:futures-lite",
 #  "dep:rcgen",
 #  "dep:rustls",
 #  "dep:rustls-pemfile",
@@ -123,23 +122,24 @@ tokio = { version = "1.34", features = [
 console_error_panic_hook = { version = "0.1.7"}
 ring = { version = "0.17.7", optional = true }
 web-sys = { version = "0.3", optional = true, features = [
+  "ReadableStream",
+  "WritableStream",
+  "ReadableStreamDefaultReader",
+  "WritableStreamDefaultWriter",
   "WebTransport",
   "WebTransportHash",
   "WebTransportOptions",
   "WebTransportBidirectionalStream",
   "WebTransportSendStream",
   "WebTransportReceiveStream",
-  "ReadableStreamDefaultReader",
-  "WritableStreamDefaultWriter",
   "WebTransportDatagramDuplexStream",
 ]}
-futures-lite = {  version = "2.1.0", optional = true }
+wasm-bindgen = { version = "0.2.90", optional = true }
+js-sys = { version = "0.3.67", optional = true }
 getrandom = { version = "0.2.11", features = ["js"] }  # feature 'js' is required for wasm
 #rcgen = { version = "0.11.3", optional = true }
 #rustls = { version = "0.22.1", optional = true }
 #rustls-pemfile = { version = "2.0.0", optional = true }
-xwt-core = { version = "0.2", optional = true }
-xwt-web-sys = { version = "0.3.1", optional = true }
 tokio = { version = "1.34", features = [
   "macros",
   "rt",
