--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -29,10 +29,10 @@ webtransport = [
   "dep:web-sys",
   "dep:tokio",
   "dep:ring",
-#  "dep:futures-lite",
-#  "dep:rcgen",
-#  "dep:rustls",
-#  "dep:rustls-pemfile",
+  #  "dep:futures-lite",
+  #  "dep:rcgen",
+  #  "dep:rustls",
+  #  "dep:rustls-pemfile",
 ]
 leafwing = ["dep:leafwing-input-manager", "lightyear_macros/leafwing"]
 xpbd_2d = ["dep:bevy_xpbd_2d"]
@@ -63,7 +63,6 @@ bevy_xpbd_2d = { version = "0.3.3", optional = true }
 # transport
 #wtransport = { version = "0.1.9", optional = true }
 #xwt = { version = "0.3", optional = true }
-
 
 
 # serialization
@@ -107,8 +106,9 @@ bevy = { version = "0.12", default-features = false }
 
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
 wtransport = { version = "0.1.10", optional = true, features = [
-  "self-signed", "dangerous-configuration"
-]}
+  "self-signed",
+  "dangerous-configuration",
+] }
 tokio = { version = "1.34", features = [
   "macros",
   "rt",
@@ -120,7 +120,7 @@ tokio = { version = "1.34", features = [
 ], optional = true }
 
 [target."cfg(target_family = \"wasm\")".dependencies]
-console_error_panic_hook = { version = "0.1.7"}
+console_error_panic_hook = { version = "0.1.7" }
 ring = { version = "0.17.7", optional = true }
 web-sys = { version = "0.3", optional = true, features = [
   "WebTransport",
@@ -132,9 +132,11 @@ web-sys = { version = "0.3", optional = true, features = [
   "ReadableStreamDefaultReader",
   "WritableStreamDefaultWriter",
   "WebTransportDatagramDuplexStream",
-]}
-futures-lite = {  version = "2.1.0", optional = true }
-getrandom = { version = "0.2.11", features = ["js"] }  # feature 'js' is required for wasm
+] }
+futures-lite = { version = "2.1.0", optional = true }
+getrandom = { version = "0.2.11", features = [
+  "js",
+] } # feature 'js' is required for wasm
 #rcgen = { version = "0.11.3", optional = true }
 #rustls = { version = "0.22.1", optional = true }
 #rustls-pemfile = { version = "2.0.0", optional = true }
@@ -144,7 +146,7 @@ tokio = { version = "1.34", features = [
   "macros",
   "rt",
   # "rt-multi-thread" is only valid in native.
-#  "rt-multi-thread",
+  #  "rt-multi-thread",
   "sync",
   #  "net",
   "time",
