--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,6 @@
 [build]
 #target = "wasm32-unknown-unknown"
-target = "aarch64-apple-darwin"
+#target = "aarch64-apple-darwin"
 rustflags = ["--cfg", "web_sys_unstable_apis"]
 
 [target.wasm32-unknown-unknown]
