--- a/examples/interest_management/Cargo.toml
+++ b/examples/interest_management/Cargo.toml
@@ -61,4 +61,10 @@ web-sys = { version = "0.3", features = [
   "WritableStreamDefaultWriter",
   "WebTransportDatagramDuplexStream",
 ] }
+# tokio multi-threaded runtime is not supported on wasm
+tokio = { version = "1.34", features = [
+  "rt",
+#  "net",
+#  "time",
+], optional = true }
 wasm-bindgen-test = "0.3.39"
