--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -53,7 +53,8 @@ paste = "1.0"
 rand = "0.8"
 ringbuffer = "0.15"
 thiserror = "1.0.50"
-xxhash-rust = { version = "0.8.8", features = ["xxh3"] }
+seahash = "4.1.0"
+#xxhash-rust = { version = "0.8.8", features = ["xxh32"] }
 
 # input
 leafwing-input-manager = { version = "0.11.2", optional = true }
