fix github pages: need only one workflow for the website

--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -1,8 +1,9 @@
-name: Update Book
+name: Deploy website
 on:
   push:
     paths:
       - "book/**"
+      - "examples/**"
     branches:
       - main
 
@@ -32,13 +33,16 @@ jobs:
         run: |
           cd book
           mdbook build
+          cd ..
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: 'book'
+          path: |
+            book/book
+            examples
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
