--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -3,7 +3,7 @@ on:
   push:
     paths:
       - "book/**"
-      - "examples/**"
+      # - "examples/**"
     branches:
       - main
 
@@ -33,16 +33,13 @@ jobs:
         run: |
           cd book
           mdbook build
-          cd ..
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: |
-            book/book
-            examples
+          path: book
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
