--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -32,6 +32,7 @@ webtransport = [
 ]
 leafwing = ["dep:leafwing-input-manager", "lightyear_macros/leafwing"]
 xpbd_2d = ["dep:bevy_xpbd_2d"]
+rivet = ["dep:serde_json", "dep:reqwest"]
 
 [dependencies]
 # utils
@@ -91,10 +92,14 @@ metrics-exporter-prometheus = { version = "0.13.0", optional = true, default-fea
   "http-listener",
 ] }
 
-
 # bevy
 bevy = { version = "0.12", default-features = false }
 
+# rivet
+serde_json = {  version = "1.0.108", optional = true }
+reqwest = { version = "0.11.23", features = ["blocking", "json"], optional = true }
+
+# transport
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
 wtransport = { version = "0.1.10", optional = true, features = [
   "self-signed",
