--- a/examples/simple_box/Cargo.toml
+++ b/examples/simple_box/Cargo.toml
@@ -34,5 +34,8 @@ bevy-inspector-egui = "0.22.1"
 tokio = { version = "1.34.0", features = ["rt", "macros"] }
 
 # rivet
-serde_json = {  version = "1.0.108", optional = true }
-reqwest = { version = "0.11.23", features = ["blocking", "json"], optional = true }
+serde_json = { version = "1.0.108", optional = true }
+reqwest = { version = "0.11.23", features = [
+  "blocking",
+  "json",
+], optional = true }
