--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -96,8 +96,11 @@ metrics-exporter-prometheus = { version = "0.13.0", optional = true, default-fea
 bevy = { version = "0.12", default-features = false }
 
 # rivet
-serde_json = {  version = "1.0.108", optional = true }
-reqwest = { version = "0.11.23", features = ["blocking", "json"], optional = true }
+serde_json = { version = "1.0.108", optional = true }
+reqwest = { version = "0.11.23", features = [
+  "blocking",
+  "json",
+], optional = true }
 clap = { version = "4.4.18", features = ["derive"], optional = true }
 axum = { version = "0.7.1", optional = true }
 
