--- a/examples/replication_groups/Cargo.toml
+++ b/examples/replication_groups/Cargo.toml
@@ -31,8 +31,8 @@ mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 bevy-inspector-egui = "0.22.1"
 tokio = { version = "1.34.0", features = [
-    "rt",
-    "rt-multi-thread",
-    "net",
-    "time"
-]}
+  "rt",
+  "rt-multi-thread",
+  "net",
+  "time",
+] }
