--- a/examples/simple_box/Cargo.toml
+++ b/examples/simple_box/Cargo.toml
@@ -11,7 +11,11 @@ keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
 categories = ["game-development", "network-programming"]
 license = "MIT OR Apache-2.0"
 publish = false
+default-run = "simple_box"
 
+[[bin]]
+name = "rivet_backend"
+path = "src/rivet/backend.rs"
 
 [features]
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
