--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -32,7 +32,7 @@ webtransport = [
 ]
 leafwing = ["dep:leafwing-input-manager", "lightyear_macros/leafwing"]
 xpbd_2d = ["dep:bevy_xpbd_2d"]
-rivet = ["dep:serde_json", "dep:reqwest", "dep:clap", "dep:axum"]
+rivet = ["dep:serde_json", "dep:reqwest", "dep:clap", "dep:axum", "dep:tokio", "dep:tower"]
 
 [dependencies]
 # utils
@@ -103,6 +103,8 @@ reqwest = { version = "0.11.23", features = [
 ], optional = true }
 clap = { version = "4.4.18", features = ["derive"], optional = true }
 axum = { version = "0.7.1", optional = true }
+tower = { version = "0.4.13", optional = true }
+axum-macros = "0.4.1"
 
 # transport
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
