--- a/examples/leafwing_inputs/Cargo.toml
+++ b/examples/leafwing_inputs/Cargo.toml
@@ -33,9 +33,18 @@ clap = { version = "4.4", features = ["derive"] }
 mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 bevy-inspector-egui = "0.22.1"
-tokio = { version = "1.34.0", features = [
+cfg-if = "1.0.0"
+
+[target."cfg(not(target_family = \"wasm\"))".dependencies]
+tokio = { version = "1.34", features = [
   "rt",
   "rt-multi-thread",
   "net",
   "time",
-] }
+]}
+
+[target."cfg(target_family = \"wasm\")".dependencies]
+# tokio multi-threaded runtime is not supported on wasm
+tokio = { version = "1.34", features = [
+  "rt",
+]}
