--- a/server/lightyear.conf
+++ b/server/lightyear.conf
@@ -45,3 +45,6 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/simple_box.err.log
 stdout_logfile=/var/log/simple_box.out.log
+
+[group:lightyear]
+programs=bullet_prespawn,client_replication,interest_management,leafwing_inputs,replication_groups,simple_box
