update supervisor conf

--- a/server/lightyear.conf
+++ b/server/lightyear.conf
@@ -1,50 +1,62 @@
 [program:bullet_prespawn]
 directory=/root/lightyear/examples/bullet_prespawn
-command=/bin/sh -c "/root/.cargo/bin/cargo run --release -- server --headless -p 4000"
+command=/bin/sh -c "/root/lightyear/target/release/bullet_prespawn server --headless -p 4000"
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/bullet_prespawn.err.log
 stdout_logfile=/var/log/bullet_prespawn.out.log
+stopasgroup=true
+stopsignal=QUIT
 
 [program:client_replication]
 directory=/root/lightyear/examples/client_replication
-command=/bin/sh -c "/root/.cargo/bin/cargo run --release -- server --headless -p 4001"
+command=/bin/sh -c "/root/lightyear/target/release/client_replication server --headless -p 4001"
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/client_replication.err.log
 stdout_logfile=/var/log/client_replication.out.log
+stopasgroup=true
+stopsignal=QUIT
 
 [program:interest_management]
 directory=/root/lightyear/examples/interest_management
-command=/bin/sh -c "/root/.cargo/bin/cargo run --release -- server --headless -p 4002"
+command=/bin/sh -c "/root/lightyear/target/release/interest_management server --headless -p 4002"
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/interest_management.err.log
 stdout_logfile=/var/log/interest_management.out.log
+stopasgroup=true
+stopsignal=QUIT
 
 [program:leafwing_inputs]
 directory=/root/lightyear/examples/leafwing_inputs
-command=/bin/sh -c "/root/.cargo/bin/cargo run --release -- server --headless -p 4003"
+command=/bin/sh -c "/root/lightyear/target/release/leafwing_inputs server --headless -p 4003 --predict"
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/leafwing_inputs.err.log
 stdout_logfile=/var/log/leafwing_inputs.out.log
+stopasgroup=true
+stopsignal=QUIT
 
 [program:replication_groups]
 directory=/root/lightyear/examples/replication_groups
-command=/bin/sh -c "/root/.cargo/bin/cargo run --release -- server --headless -p 4004"
+command=/bin/sh -c "/root/lightyear/target/release/replication_groups server --headless -p 4004"
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/replication_groups.err.log
 stdout_logfile=/var/log/replication_groups.out.log
+stopasgroup=true
+stopsignal=QUIT
 
 [program:simple_box]
 directory=/root/lightyear/examples/simple_box
-command=/bin/sh -c "/root/.cargo/bin/cargo run --release -- server --headless -p 4005"
+command=/bin/sh -c "/root/lightyear/target/release/simple_box server --headless -p 4005"
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/simple_box.err.log
 stdout_logfile=/var/log/simple_box.out.log
+stopasgroup=true
+stopsignal=QUIT
 
 [group:lightyear]
 programs=bullet_prespawn,client_replication,interest_management,leafwing_inputs,replication_groups,simple_box
