--- a/examples/leafwing_inputs/Cargo.toml
+++ b/examples/leafwing_inputs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "leafwing-inputs"
+name = "leafwing_inputs"
 version = "0.0.0"
 authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
 edition = "2021"
