--- a/examples/interest_management/Cargo.toml
+++ b/examples/interest_management/Cargo.toml
@@ -43,10 +43,8 @@ tokio = { version = "1.34", features = [
   "rt-multi-thread",
   "net",
   "time",
-]}
+] }
 
 [target."cfg(target_family = \"wasm\")".dependencies]
 # tokio multi-threaded runtime is not supported on wasm
-tokio = { version = "1.34", features = [
-  "rt",
-]}
+tokio = { version = "1.34", features = ["rt"] }
