--- a/examples/priority/Cargo.toml
+++ b/examples/priority/Cargo.toml
@@ -37,3 +37,4 @@ mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 bevy-inspector-egui = "0.22.1"
 tokio = { version = "1.34.0", features = ["rt", "macros"] }
+cfg-if = "1.0.0"
