--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -32,6 +32,7 @@ webtransport = [
 ]
 leafwing = ["dep:leafwing-input-manager", "lightyear_macros/leafwing"]
 xpbd_2d = ["dep:bevy_xpbd_2d"]
+websockets = ["dep:fastwebsockets", "dep:tokio", "dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:webpki-roots"]
 
 [dependencies]
 # utils
@@ -96,10 +97,6 @@ metrics-exporter-prometheus = { version = "0.13.0", optional = true, default-fea
 bevy = { version = "0.12", default-features = false }
 
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
-wtransport = { version = "0.1.10", optional = true, features = [
-  "self-signed",
-  "dangerous-configuration",
-] }
 tokio = { version = "1.34", features = [
   "macros",
   "rt",
@@ -108,6 +105,24 @@ tokio = { version = "1.34", features = [
   "sync",
   "time",
 ], optional = true }
+
+# WebTransport
+wtransport = { version = "0.1.10", optional = true, features = [
+  "self-signed",
+  "dangerous-configuration",
+] }
+
+# WebSockets
+fastwebsockets = { version = "0.6.0", optional = true, features = [
+  "simd",
+  "upgrade"
+] }
+hyper = { version = "1.1.0", features = ["http1", "server", "client"], optional = true }
+hyper-util = { version = "0.1.2", features = ["tokio"], optional = true }
+http-body-util = { version = "0.1.0", optional = true }
+tokio-rustls = { version = "0.25.0", optional = true } # tls
+rustls-pemfile = { version = "2.0.0", optional = true } # tls server
+webpki-roots = { version = "0.26.0", optional = true } # tls client
 
 [target."cfg(target_family = \"wasm\")".dependencies]
 console_error_panic_hook = { version = "0.1.7" }
