--- a/server/lightyear.conf
+++ b/server/lightyear.conf
@@ -38,9 +38,19 @@ stdout_logfile=/var/log/leafwing_inputs.out.log
 stopasgroup=true
 stopsignal=QUIT
 
+[program:priority]
+directory=/root/lightyear/examples/priority
+command=/bin/sh -c "/root/lightyear/target/release/priority server --headless -p 4004"
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/replication_groups.err.log
+stdout_logfile=/var/log/replication_groups.out.log
+stopasgroup=true
+stopsignal=QUIT
+
 [program:replication_groups]
 directory=/root/lightyear/examples/replication_groups
-command=/bin/sh -c "/root/lightyear/target/release/replication_groups server --headless -p 4004"
+command=/bin/sh -c "/root/lightyear/target/release/replication_groups server --headless -p 4005"
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/replication_groups.err.log
@@ -50,7 +60,7 @@ stopsignal=QUIT
 
 [program:simple_box]
 directory=/root/lightyear/examples/simple_box
-command=/bin/sh -c "/root/lightyear/target/release/simple_box server --headless -p 4005"
+command=/bin/sh -c "/root/lightyear/target/release/simple_box server --headless -p 4006"
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/simple_box.err.log
@@ -59,4 +69,4 @@ stopasgroup=true
 stopsignal=QUIT
 
 [group:lightyear]
-programs=bullet_prespawn,client_replication,interest_management,leafwing_inputs,replication_groups,simple_box
+programs=bullet_prespawn,client_replication,interest_management,leafwing_inputs,priority,replication_groups,simple_box
