--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -32,7 +32,7 @@ webtransport = [
 ]
 leafwing = ["dep:leafwing-input-manager", "lightyear_macros/leafwing"]
 xpbd_2d = ["dep:bevy_xpbd_2d"]
-websockets = ["dep:fastwebsockets", "dep:tokio", "dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:webpki-roots"]
+websockets = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:web-sys", "dep:wasm-bindgen"]
 
 [dependencies]
 # utils
@@ -113,16 +113,12 @@ wtransport = { version = "0.1.10", optional = true, features = [
 ] }
 
 # WebSockets
-fastwebsockets = { version = "0.6.0", optional = true, features = [
-  "simd",
-  "upgrade"
+tokio-tungstenite = { version = "0.21.0", optional = true, features = [
+  "connect",
+  "handshake",
 ] }
-hyper = { version = "1.1.0", features = ["http1", "server", "client"], optional = true }
-hyper-util = { version = "0.1.2", features = ["tokio"], optional = true }
-http-body-util = { version = "0.1.0", optional = true }
-tokio-rustls = { version = "0.25.0", optional = true } # tls
-rustls-pemfile = { version = "2.0.0", optional = true } # tls server
-webpki-roots = { version = "0.26.0", optional = true } # tls client
+futures-util = { version = "0.3.30", optional = true }
+
 
 [target."cfg(target_family = \"wasm\")".dependencies]
 console_error_panic_hook = { version = "0.1.7" }
@@ -137,6 +133,12 @@ web-sys = { version = "0.3", optional = true, features = [
   "ReadableStreamDefaultReader",
   "WritableStreamDefaultWriter",
   "WebTransportDatagramDuplexStream",
+
+  "WebSocket",
+  "CloseEvent",
+  "ErrorEvent",
+  "MessageEvent",
+  "BinaryType",
 ] }
 futures-lite = { version = "2.1.0", optional = true }
 getrandom = { version = "0.2.11", features = [
@@ -150,7 +152,7 @@ tokio = { version = "1.34", features = [
   "sync",
   "time",
 ], optional = true }
-
+wasm-bindgen = { version = "0.2.90", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.39"
