--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -32,7 +32,7 @@ webtransport = [
 ]
 leafwing = ["dep:leafwing-input-manager", "lightyear_macros/leafwing"]
 xpbd_2d = ["dep:bevy_xpbd_2d"]
-websockets = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:web-sys", "dep:wasm-bindgen"]
+websocket = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:web-sys", "dep:wasm-bindgen"]
 
 [dependencies]
 # utils
@@ -96,6 +96,19 @@ metrics-exporter-prometheus = { version = "0.13.0", optional = true, default-fea
 # bevy
 bevy = { version = "0.12", default-features = false }
 
+# WebTransport
+wtransport = { version = "0.1.10", optional = true, features = [
+  "self-signed",
+  "dangerous-configuration",
+] }
+
+# WebSocket
+tokio-tungstenite = { version = "0.21.0", optional = true, features = [
+  "connect",
+  "handshake",
+] }
+futures-util = { version = "0.3.30", optional = true }
+
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
 tokio = { version = "1.34", features = [
   "macros",
@@ -105,20 +118,6 @@ tokio = { version = "1.34", features = [
   "sync",
   "time",
 ], optional = true }
-
-# WebTransport
-wtransport = { version = "0.1.10", optional = true, features = [
-  "self-signed",
-  "dangerous-configuration",
-] }
-
-# WebSockets
-tokio-tungstenite = { version = "0.21.0", optional = true, features = [
-  "connect",
-  "handshake",
-] }
-futures-util = { version = "0.3.30", optional = true }
-
 
 [target."cfg(target_family = \"wasm\")".dependencies]
 console_error_panic_hook = { version = "0.1.7" }
