--- a/examples/interest_management/Cargo.toml
+++ b/examples/interest_management/Cargo.toml
@@ -20,6 +20,7 @@ mock_time = ["lightyear/mock_time"]
 leafwing-input-manager = "0.11.2"
 lightyear = { path = "../../lightyear", features = [
   "webtransport",
+  "websocket",
   "render",
   "leafwing",
 ] }
