--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -40,7 +40,13 @@ rivet = [
   "dep:tokio",
   "dep:tower",
 ]
-websocket = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:web-sys", "dep:wasm-bindgen"]
+websocket = [
+  "dep:tokio",
+  "dep:tokio-tungstenite",
+  "dep:futures-util",
+  "dep:web-sys",
+  "dep:wasm-bindgen",
+]
 
 [dependencies]
 # utils
@@ -126,16 +132,16 @@ futures-util = { version = "0.3.30", optional = true }
 # transport
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
 wtransport = { version = "0.1.10", optional = true, features = [
-    "self-signed",
-    "dangerous-configuration",
+  "self-signed",
+  "dangerous-configuration",
 ] }
 tokio = { version = "1.34", features = [
-    "macros",
-    "rt",
-    # "rt-multi-thread" is only valid in native.
-    "rt-multi-thread",
-    "sync",
-    "time",
+  "macros",
+  "rt",
+  # "rt-multi-thread" is only valid in native.
+  "rt-multi-thread",
+  "sync",
+  "time",
 ], optional = true }
 
 [target."cfg(target_family = \"wasm\")".dependencies]
