try compiling for x64

--- a/examples/simple_box/Dockerfile
+++ b/examples/simple_box/Dockerfile
@@ -1,5 +1,5 @@
 # must be run from the root directory
-FROM rust:1.75-slim-bullseye as builder
+FROM --platform=$BUILDPLATFORM rust:1.75-slim-bullseye as builder
 RUN apt-get update && apt-get install -y pkg-config libssl-dev libasound2-dev portaudio19-dev build-essential libpulse-dev libdbus-1-dev libudev-dev && rm -rf /var/lib/apt/lists/*
 COPY examples/certificates /app/examples/certificates
 COPY examples/simple_box /app/examples/simple_box
