--- a/.github/workflows/edgegap.yaml
+++ b/.github/workflows/edgegap.yaml
@@ -1,4 +1,4 @@
-name: Main
+name: Edgegap
 on:
   push:
     branches:
@@ -18,7 +18,7 @@ jobs:
   build:
     name: Format
     environment: edgegap
-    runs-on: ["linux", "x64"]
+    runs-on: ["ubuntu", "x64"]
     steps:
       - name: Install packages
         run: sudo apt-get update && sudo apt-get install -y pkg-config libssl-dev libasound2-dev portaudio19-dev build-essential libpulse-dev libdbus-1-dev libudev-dev
