--- a/examples/simple_box/Dockerfile-cross
+++ b/examples/simple_box/Dockerfile-cross
@@ -1,5 +1,8 @@
-FROM ghcr.io/cross-rs/aarch64-unknown-linux-gnu:latest
+# base pre-built cross image
+ARG CROSS_BASE_IMAGE
+FROM $CROSS_BASE_IMAGE
 
+# install dependencies
 RUN apt-get update && apt-get install -y libssl-dev ca-certificates libasound2-dev libpulse-dev libdbus-1-dev portaudio19-dev
 COPY target/x86_64-unknown-linux-gnu/release/simple_box /app/examples/simple_box/simple_box
 COPY examples/certificates /app/examples/certificates
