--- a/.github/workflows/edgegap.yaml
+++ b/.github/workflows/edgegap.yaml
@@ -35,11 +35,17 @@ jobs:
       - name: Build examples
         run: cd examples/simple_box && cargo build --release && cd ../..
 
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: target/x86_64-unknown-linux-gnu/release/simple_box
+          name: simple_box
+
       - name: Docker login
-        run: docker login $EDGEGAP_REGISTRY_URL -u ${{ secrets.EDGEGAP_REGISTRY_USERNAME }} -p ${{ secrets.EDGEGAP_REGISTRY_PASSWORD }}
+        run: docker login ${{ vars.EDGEGAP_REGISTRY_URL }} -u ${{ secrets.EDGEGAP_REGISTRY_USERNAME }} -p ${{ secrets.EDGEGAP_REGISTRY_PASSWORD }}
 
       - name: Build docker image
-        run: docker build -t $EDGEGAP_REGISTRY_URL/${{ secrets.EDGEGAP_REGISTRY_PROJECT }}/simple_box:$GITHUB_SHA -f examples/simple_box/Dockerfile-amd64 .
+        run: docker build -t ${{ vars.EDGEGAP_REGISTRY_URL }}/${{ secrets.EDGEGAP_REGISTRY_PROJECT }}/simple_box:$GITHUB_SHA -f examples/simple_box/Dockerfile-amd64 .
 
       - name: Push docker image
-        run: docker push $EDGEGAP_REGISTRY_URL/${{ secrets.EDGEGAP_REGISTRY_PROJECT }}/simple_box:$GITHUB_SHA
+        run: docker push ${{ vars.EDGEGAP_REGISTRY_URL }}/${{ secrets.EDGEGAP_REGISTRY_PROJECT }}/simple_box:$GITHUB_SHA
