--- a/.github/workflows/edgegap.yaml
+++ b/.github/workflows/edgegap.yaml
@@ -36,7 +36,7 @@ jobs:
         run: cd examples/simple_box && cargo build --release --target x86_64-unknown-linux-gnu && cd ../..
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           path: target/x86_64-unknown-linux-gnu/release/simple_box
           name: simple_box
