--- a/.github/workflows/edgegap.yaml
+++ b/.github/workflows/edgegap.yaml
@@ -42,7 +42,7 @@ jobs:
           name: simple_box
 
       - name: Docker login
-        run: docker login ${{ vars.EDGEGAP_REGISTRY_URL }} -u ${{ secrets.EDGEGAP_REGISTRY_USERNAME }} -p ${{ secrets.EDGEGAP_REGISTRY_PASSWORD }}
+        run: docker login -u '${{ secrets.EDGEGAP_REGISTRY_USERNAME }}' -p ${{ secrets.EDGEGAP_REGISTRY_PASSWORD }} ${{ vars.EDGEGAP_REGISTRY_URL }}
 
       - name: Build docker image
         run: docker build -t ${{ vars.EDGEGAP_REGISTRY_URL }}/${{ secrets.EDGEGAP_REGISTRY_PROJECT }}/simple_box:$GITHUB_SHA -f examples/simple_box/Dockerfile-amd64 .
