--- a/examples/simple_box/Dockerfile-amd64
+++ b/examples/simple_box/Dockerfile-amd64
@@ -1,7 +1,8 @@
 FROM debian:bullseye-slim
-RUN apt-get update && apt-get install -y libssl-dev ca-certificates libasound2-dev
-COPY target/x86_64-unknown-linux-gnu/release/simple_box /app/examples/simple_box/simple_box
+RUN apt-get update && apt-get install -y libssl-dev ca-certificates libasound2-dev libc6
+# COPY target/x86_64-unknown-linux-gnu/release/simple_box /app/examples/simple_box/simple_box
 COPY examples/certificates /app/examples/certificates
+COPY examples/simple_box/simple_box /app/examples/simple_box/simple_box
 WORKDIR /app/examples/simple_box
 RUN chmod +x simple_box
 EXPOSE 4006/udp
