--- a/examples/priority/Cargo.toml
+++ b/examples/priority/Cargo.toml
@@ -26,6 +26,7 @@ lightyear = { path = "../../lightyear", features = [
   "render",
   "leafwing",
 ] }
+async-compat = "0.2.3"
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
@@ -37,5 +38,4 @@ clap = { version = "4.4", features = ["derive"] }
 mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 bevy-inspector-egui = "0.22.1"
-tokio = { version = "1.34.0", features = ["rt", "macros"] }
 cfg-if = "1.0.0"
