--- a/examples/replication_groups/Cargo.toml
+++ b/examples/replication_groups/Cargo.toml
@@ -23,6 +23,7 @@ lightyear = { path = "../../lightyear", features = [
   "websocket",
   "render",
 ] }
+async-compat = "0.2.3"
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
@@ -35,15 +36,3 @@ mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 bevy-inspector-egui = "0.22.1"
 cfg-if = "1.0.0"
-
-[target."cfg(not(target_family = \"wasm\"))".dependencies]
-tokio = { version = "1.34", features = [
-  "rt",
-  "rt-multi-thread",
-  "net",
-  "time",
-] }
-
-[target."cfg(target_family = \"wasm\")".dependencies]
-# tokio multi-threaded runtime is not supported on wasm
-tokio = { version = "1.34", features = ["rt"] }
