--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -101,14 +101,15 @@ metrics-exporter-prometheus = { version = "0.13.0", optional = true, default-fea
 ] }
 
 # bevy
-bevy = { version = "0.12", default-features = false }
+bevy = { version = "0.12", default-features = false, features = ["multi-threaded"] }
 
 # WebSocket
 futures-util = { version = "0.3.30", optional = true }
 
 # transport
 # we don't need any tokio features, we use only use the tokio channels
-tokio = { version = "1.36", features = [], default-features = false, optional = true }
+tokio = { version = "1.36", features = [
+], default-features = false, optional = true }
 async-compat = "0.2.3"
 
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
@@ -150,8 +151,6 @@ getrandom = { version = "0.2.11", features = [
 xwt-core = { version = "0.2", optional = true }
 xwt-web-sys = { version = "0.5.1", optional = true }
 wasm-bindgen = { version = "0.2.90", optional = true }
-
-
 
 
 [dev-dependencies]
