--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -162,6 +162,7 @@ derive_more = { version = "0.99", features = ["add", "mul"] }
 mock_instant = { version = "0.3.1" }
 tracing-subscriber = "0.3.17"
 bitvec = "1.0"
+approx = "0.5.1"
 
 # docs.rs-specific configuration
 [package.metadata.docs.rs]
