add hierarchy plugin to replicate hierarchies

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,3 +5,11 @@ rustflags = ["--cfg", "web_sys_unstable_apis"]
 
 [target.wasm32-unknown-unknown]
 runner = "wasm-server-runner"
+
+# Enable max optimizations for dependencies, but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
+
+# Enable only a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
