--- a/examples/priority/Cargo.toml
+++ b/examples/priority/Cargo.toml
@@ -18,7 +18,7 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 mock_time = ["lightyear/mock_time"]
 
 [dependencies]
-bevy_screen_diagnostics = "0.4.0"
+bevy_screen_diagnostics = "0.5.0"
 leafwing-input-manager = "0.11.2"
 lightyear = { path = "../../lightyear", features = [
   "webtransport",
@@ -37,5 +37,5 @@ rand = "0.8.1"
 clap = { version = "4.4", features = ["derive"] }
 mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
-bevy-inspector-egui = "0.22.1"
+#bevy-inspector-egui = "0.22.1"
 cfg-if = "1.0.0"
