--- a/examples/bullet_prespawn/Cargo.toml
+++ b/examples/bullet_prespawn/Cargo.toml
@@ -11,9 +11,9 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 mock_time = ["lightyear/mock_time"]
 
 [dependencies]
-bevy_framepace = "0.14.1"
-bevy_screen_diagnostics = "0.4.0"
-leafwing-input-manager = "0.11.2"
+bevy_framepace = "0.15"
+bevy_screen_diagnostics = "0.5.0"
+leafwing-input-manager = "0.13"
 lightyear = { path = "../../lightyear", features = [
   "webtransport",
   "websocket",
@@ -31,5 +31,5 @@ rand = "0.8.1"
 clap = { version = "4.4", features = ["derive"] }
 mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
-bevy-inspector-egui = "0.22.1"
+#bevy-inspector-egui = "0.22.1"
 cfg-if = "1.0.0"
