--- a/examples/interest_management/Cargo.toml
+++ b/examples/interest_management/Cargo.toml
@@ -17,7 +17,7 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 mock_time = ["lightyear/mock_time"]
 
 [dependencies]
-leafwing-input-manager = "0.11.2"
+leafwing-input-manager = "0.13"
 lightyear = { path = "../../lightyear", features = [
   "webtransport",
   "websocket",
@@ -35,5 +35,5 @@ rand = "0.8.5"
 clap = { version = "4.4", features = ["derive"] }
 mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
-bevy-inspector-egui = "0.22.1"
+#bevy-inspector-egui = "0.22.1"
 cfg-if = "1.0.0"
