--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -39,6 +39,7 @@ websocket = [
   "dep:web-sys",
   "dep:wasm-bindgen",
 ]
+steam = ["dep:steamworks"]
 
 [dependencies]
 # utils
@@ -105,6 +106,9 @@ metrics-exporter-prometheus = { version = "0.13.0", optional = true, default-fea
 bevy = { version = "0.13", default-features = false, features = [
   "multi-threaded",
 ] }
+
+# connection
+steamworks = { version = "0.11", optional = true }
 
 # WebSocket
 futures-util = { version = "0.3.30", optional = true }
