--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -132,6 +132,7 @@ tokio-tungstenite = { version = "0.21.0", optional = true, features = [
 console_error_panic_hook = { version = "0.1.7" }
 ring = { version = "0.17.7", optional = true }
 web-sys = { version = "0.3", optional = true, features = [
+  "FileReader",
   "WebTransport",
   "WebTransportHash",
   "WebTransportOptions",
