--- a/examples/bullet_prespawn/Cargo.toml
+++ b/examples/bullet_prespawn/Cargo.toml
@@ -35,5 +35,5 @@ cfg-if = "1.0.0"
 ron = "0.8.1"
 
 [target."cfg(target_family = \"wasm\")".dependencies]
-web-sys = "0.3"
-wasm-bindgen = "0.2"
+console_error_panic_hook = { version = "0.1.7" }
+
