--- a/examples/client_replication/Cargo.toml
+++ b/examples/client_replication/Cargo.toml
@@ -36,3 +36,6 @@ mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 bevy-inspector-egui = "0.23"
 cfg-if = "1.0.0"
+
+[target."cfg(target_family = \"wasm\")".dependencies]
+console_error_panic_hook = { version = "0.1.7" }
