--- a/examples/bullet_prespawn/Cargo.toml
+++ b/examples/bullet_prespawn/Cargo.toml
@@ -14,10 +14,10 @@ mock_time = ["lightyear/mock_time"]
 bevy_screen_diagnostics = "0.5.0"
 leafwing-input-manager = "0.13"
 lightyear = { path = "../../lightyear", features = [
-  "webtransport",
-  "websocket",
-  "render",
-  "leafwing",
+    "webtransport",
+    "websocket",
+    "render",
+    "leafwing",
 ] }
 async-compat = "0.2.3"
 serde = { version = "1.0.188", features = ["derive"] }
@@ -33,3 +33,4 @@ metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 bevy-inspector-egui = "0.23"
 cfg-if = "1.0.0"
 ron = "0.8.1"
+crossbeam-channel = "0.5.11"
