--- a/examples/leafwing_inputs/Cargo.toml
+++ b/examples/leafwing_inputs/Cargo.toml
@@ -16,11 +16,11 @@ bevy_screen_diagnostics = "0.5.0"
 leafwing-input-manager = "0.13"
 bevy_xpbd_2d = { version = "0.4", features = ["serialize"] }
 lightyear = { path = "../../lightyear", features = [
-  "webtransport",
-  "websocket",
-  "render",
-  "leafwing",
-  "xpbd_2d",
+    "webtransport",
+    "websocket",
+    "render",
+    "leafwing",
+    "xpbd_2d",
 ] }
 async-compat = "0.2.3"
 serde = { version = "1.0.188", features = ["derive"] }
@@ -35,3 +35,4 @@ mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 bevy-inspector-egui = "0.23"
 cfg-if = "1.0.0"
+crossbeam-channel = "0.5.11"
