--- a/examples/priority/Cargo.toml
+++ b/examples/priority/Cargo.toml
@@ -21,10 +21,10 @@ mock_time = ["lightyear/mock_time"]
 bevy_screen_diagnostics = "0.5.0"
 leafwing-input-manager = "0.13"
 lightyear = { path = "../../lightyear", features = [
-  "webtransport",
-  "websocket",
-  "render",
-  "leafwing",
+    "webtransport",
+    "websocket",
+    "render",
+    "leafwing",
 ] }
 async-compat = "0.2.3"
 serde = { version = "1.0.188", features = ["derive"] }
@@ -39,3 +39,4 @@ mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 bevy-inspector-egui = "0.23"
 cfg-if = "1.0.0"
+crossbeam-channel = "0.5.11"
