--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -18,8 +18,14 @@ crossbeam-channel = "0.5.10"
 anyhow = { version = "1.0.75", features = [] }
 bevy = { version = "0.13", features = ["bevy_core_pipeline"] }
 derive_more = { version = "0.99", features = ["add", "mul"] }
-divan = "0.1.11"
+divan = "0.1.14"
 serde = { version = "1.0.188", features = ["derive"] }
+
+bitcode = "0.6.0-beta.1"
+rand = "0.8.5"
+rand_chacha = "0.3.1"
+lz4_flex = { version = "0.11.2", default-features = false }
+
 
 [[bench]]
 name = "spawn"
