--- a/examples/leafwing_inputs/Cargo.toml
+++ b/examples/leafwing_inputs/Cargo.toml
@@ -11,16 +11,17 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 mock_time = ["lightyear/mock_time"]
 
 [dependencies]
+bevy_mod_debugdump = "0.10.0"
 bevy_screen_diagnostics = "0.5.0"
 leafwing-input-manager = "0.13"
 bevy_xpbd_2d = { version = "0.4", features = ["serialize"] }
 lightyear = { path = "../../lightyear", features = [
-  "webtransport",
-  "websocket",
-  "render",
-  "leafwing",
-  "xpbd_2d",
-  "steam",
+    "webtransport",
+    "websocket",
+    "render",
+    "leafwing",
+    "xpbd_2d",
+    "steam",
 ] }
 async-compat = "0.2.3"
 serde = { version = "1.0.188", features = ["derive"] }
