--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -75,7 +75,7 @@ jobs:
           --exclude=.github \
           -cvf "$RUNNER_TEMP/artifact.tar" \
           ./examples/**/dist \
-          -C book/html ./book
+          -C book ./book/html
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
