--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -37,6 +37,7 @@ jobs:
         run: |
           cd book
           mdbook build
+          mv book/html/* book
           cd ..
       #      - name: Install trunk
       #        run: |
@@ -79,7 +80,7 @@ jobs:
           --exclude=.git \
           --exclude=.github \
           -cvf "$RUNNER_TEMP/artifact.tar" \
-          -C book/book/html .
+          -C book ./book
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
