--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -138,7 +138,7 @@ tokio-tungstenite = { version = "0.21.0", optional = true, features = [
 
 [target."cfg(target_family = \"wasm\")".dependencies]
 console_error_panic_hook = { version = "0.1.7" }
-ring = { version = "0.17.7", optional = true }
+ring = { version = "0.17.8", optional = true, default-features = false }
 web-sys = { version = "0.3", optional = true, features = [
   "WebTransport",
   "WebTransportHash",
