--- a/examples/interest_management/Cargo.toml
+++ b/examples/interest_management/Cargo.toml
@@ -19,11 +19,12 @@ mock_time = ["lightyear/mock_time"]
 [dependencies]
 leafwing-input-manager = "0.13"
 lightyear = { path = "../../lightyear", features = [
-  "webtransport",
-  "websocket",
-  "render",
-  "leafwing",
-  "steam",
+    "webtransport",
+    "websocket",
+    "render",
+    "leafwing",
+    "steam",
+    "zstd",
 ] }
 async-compat = "0.2.3"
 serde = { version = "1.0.188", features = ["derive"] }
