--- a/examples/interest_management/Cargo.toml
+++ b/examples/interest_management/Cargo.toml
@@ -16,23 +16,19 @@ publish = false
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 
 [dependencies]
+common = { path = "../common" }
 leafwing-input-manager = "0.13"
 lightyear = { path = "../../lightyear", features = [
-  "webtransport",
-  "websocket",
-  "leafwing",
-  "steam",
+    "webtransport",
+    "websocket",
+    "leafwing",
+    "steam",
 ] }
-async-compat = "0.2.3"
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
 tracing-subscriber = "0.3.17"
 bevy = { version = "0.13", features = ["bevy_core_pipeline"] }
 derive_more = { version = "0.99", features = ["add", "mul"] }
-rand = "0.8.5"
-clap = { version = "4.4", features = ["derive"] }
+rand = "0.8.1"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
-bevy-inspector-egui = "0.24"
-cfg-if = "1.0.0"
-crossbeam-channel = "0.5.11"
