--- a/examples/client_replication/Cargo.toml
+++ b/examples/client_replication/Cargo.toml
@@ -12,18 +12,16 @@ categories = ["game-development", "network-programming"]
 license = "MIT OR Apache-2.0"
 publish = false
 
-
 [features]
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
-mock_time = ["lightyear/mock_time"]
 
 [dependencies]
+common = { path = "../common" }
 lightyear = { path = "../../lightyear", features = [
-  "webtransport",
-  "websocket",
-  "steam",
+    "webtransport",
+    "websocket",
+    "steam",
 ] }
-async-compat = "0.2.3"
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
@@ -31,9 +29,4 @@ tracing-subscriber = "0.3.17"
 bevy = { version = "0.13", features = ["bevy_core_pipeline"] }
 derive_more = { version = "0.99", features = ["add", "mul"] }
 rand = "0.8.1"
-clap = { version = "4.4", features = ["derive"] }
-mock_instant = "0.4"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
-bevy-inspector-egui = "0.24"
-cfg-if = "1.0.0"
-crossbeam-channel = "0.5.11"
